// Copyright 2012 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// DEPRECATED: This data type is no longer synced.
// TODO(crbug.com/978775): Remove once the file is no longer used by the server.
// Sync protocol datatype extension for the favicon tracking type.

// If you change or add any fields in this file, update proto_visitors.h and
// potentially proto_enum_conversions.{h, cc}.

syntax = "proto2";

option java_multiple_files = true;
option java_package = "org.chromium.components.sync.protocol";

option optimize_for = LITE_RUNTIME;

package sync_pb;

// Tracking info for of favicon images. These control expiration of images
// from sync based on recency, bookmark state, etc.
message FaviconTrackingSpecifics {
  // The url of the favicon image.
  optional string favicon_url = 1;
  // The last time a page using this favicon was visited (in milliseconds
  // since linux epoch).
  optional int64 last_visit_time_ms = 3;
  // Whether this favicon is currently bookmarked or not.
  optional bool is_bookmarked = 4;
}
